Welcome page complete.

--- a/public/css/core/_colors.scss
+++ b/public/css/core/_colors.scss
@@ -1,1 +1,8 @@
-$off-black: #111;
+$off-black: #040614;
+$blue: #2F41E8;
+$white: #ffffff;
+$blue-grey: #DBEDFF;
+$orange: #E3732A;
+$orange-grey: #FFEAD3;
+$mid-orange-grey: #BDAD9C;
+$light-orange-grey: #DBC9B5;
