--- a/public/bin/css/style.css
+++ b/public/bin/css/style.css
@@ -342,9 +342,9 @@ table {
   box-sizing: border-box; }
 
 html {
-  font-family: Verdana, Helvetica, Arial, sans-serif;
+  font-family: 'Titillium Web', Verdana, Helvetica, Arial, sans-serif;
   font-size: 62.5%;
-  color: #111;
+  color: #040614;
   width: 100%;
   height: 100%;
   display: block; }
@@ -355,61 +355,56 @@ body {
   height: 100%;
   width: 100%; }
 
-.page {
+.page-wrapper {
   height: 100%;
   width: 100%;
-  overflow: auto;
-  position: relative;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  transition: all 500ms ease; }
-  .page.hamburger-is-open {
-    left: -300px; }
+  position: relative; }
 
-.page-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 2;
-  width: 100%;
-  height: 40px; }
+.welcome-page {
+  background: #2F41E8;
+  color: #ffffff;
+  height: 100%; }
 
-.page-content {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-  height: 100%;
-  width: 100%;
-  padding-top: 40px; }
+.welcome-page-title {
+  font-size: 72px;
+  font-size: 7.2rem;
+  padding: 20px 20px 20px 100px;
+  height: 150px; }
 
-.hamburger-page-blocker {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 0;
-  height: 100%;
-  width: 100%;
-  background: #111;
-  opacity: 0;
-  transition: all 500ms ease; }
-  .hamburger-page-blocker.open {
-    z-index: 10000;
-    opacity: 0.8;
-    left: -300px; }
+.welcome-page-title-beer {
+  font-family: 'Germania One', cursive;
+  color: #E3732A; }
 
-.hamburger-content-wrapper {
-  position: fixed;
-  top: 0;
-  left: 100%;
-  z-index: 0;
-  height: 100%;
-  width: 300px;
-  background: #111;
-  opacity: 0;
-  transition: all 500ms ease; }
-  .hamburger-content-wrapper.open {
-    z-index: 10000;
-    opacity: 0.8;
-    margin-left: -300px; }
+.welcome-page-title-javascript {
+  font-family: 'Cutive Mono', monospace;
+  font-weight: bold;
+  color: #E3732A; }
+
+.welcome-page-body {
+  font-size: 28px;
+  font-size: 2.8rem;
+  line-height: 60px;
+  height: calc(100% - 400px);
+  padding: 20px 100px 20px 300px;
+  color: #DBC9B5; }
+
+.welcome-page-link-wrapper {
+  zoom: 1;
+  padding: 20px 100px 20px 20px;
+  height: 250px; }
+  .welcome-page-link-wrapper:after, .welcome-page-link-wrapper:before {
+    content: "";
+    display: table; }
+  .welcome-page-link-wrapper:after {
+    clear: both; }
+
+.welcome-page-link {
+  font-size: 48px;
+  font-size: 4.8rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  float: right;
+  color: #E3732A;
+  text-decoration: none; }
+  .welcome-page-link:hover {
+    text-decoration: underline; }
