First draft of the complete app. Still need to tweak content.

--- a/public/app/_app.scss
+++ b/public/app/_app.scss
@@ -1,3 +1,4 @@
 @import "features/donePage/done-page";
+@import "features/questionAnswer/question-answer";
 @import "features/questionsPage/questions-page";
 @import "features/welcomePage/welcome-page";
